remove hard coded user name

--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -16,7 +16,7 @@
             <i class="fa fa-remove"></i>
         </a>
         <img src="img/avatar_g2.jpg" style="width:45%;" class="w3-round"><br><br>
-        <h4><b>天下</b></h4>
+        <h4><b>User</b></h4>
     </div>
     <div class="w3-bar-block">
         <a href="/profile" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user fa-fw w3-margin-right"></i>修改账号</a>
@@ -31,13 +31,12 @@
 <!-- !PAGE CONTENT! -->
 <div class="w3-main" style="margin-left:300px">
 
-
     <!-- Header -->
     <header id="portfolio">
         <a href="#"><img src="img/avatar_g2.jpg" style="width:65px;" class="w3-circle w3-right w3-margin w3-hide-large w3-hover-opacity"></a>
         <span class="w3-button w3-hide-large w3-xxlarge w3-hover-text-grey" onclick="w3_open()"><i class="fa fa-bars"></i></span>
         <div class="w3-container">
-            <h1><b>天下的测试报告</b></h1>
+            <h1><b>测试报告</b></h1>
             <div class="w3-section w3-bottombar w3-padding-16">
                 <span class="w3-margin-right">操作:</span>
                 <a href="/rescan" class="w3-button w3-white" title="从保存目录重新加载报告"><i class="fa fa-refresh fa-fw w3-margin-right"></i>刷新</a>
